@@ -7,6 +7,8 @@ with 'Moose::Autobox::String',
      'Moose::Autobox::Number';     
 
 sub flatten { $_[0] }
+sub first { $_[0] }
+sub last  { $_[0] }
 sub print { CORE::print $_[0] }
 sub say   { CORE::print $_[0], "\n" }
 1;
@@ -44,6 +46,14 @@ Flattening a scalar just returns the scalar.  This means that you can say:
   # Given $input of [ 5, 2, 0], @array is (5, 2, 0)
 
 =back
+
+=item B<first>
+
+As per flatten.
+
+=item B<last>
+
+As per flatten.
 
 =head1 BUGS
 
