@@ -1,5 +1,7 @@
 Revision history for Perl extension Moose::Autobox
 
+    - add first and last to Scalar and Array (t0m)
+
 0.10
     - add each, each_key, each_value to Indexed (array and hash) (rjbs)
     - add split, words, lines to String (Sartak)
